* Jun 12 2001 hship

Add support for JAR/WAR Manifests.
Change/simplify how Java and resource cataloging takes place.
Change the $(CP) command to always include the appropriate force option.

* May 2 2001 hship

Default directory for Java source is now 'src' instead of '.'.
Improve the code that rebuilds the JBE tools.
Strip '.exe' from tools names on Cygwin (not necessary, Cygwin finds the right file for us).

* Apr 26 2001 hship

Make the WebLogic module compress the deployable EJB Jar.

* Apr 24 2001 hship

Make use of standard Cygwin mounts (/usr/bin), rather than relying on setting of
TOOLS_DIR.

* Apr 24 2001 hship

Minor improvements to the JBE Splice command.


* Apr 10 2001 hship

Add targets and rules in DocBook.mk to support packaging the HTML for distribution
to a web site.

* Feb 22 2001 hship

No longer distribute OpenJade with the JBE.
Add support for SED and CHMOD to the Platform.*.mk files.
More tweaking on the DocBook module, including strip out RTF generation.

* Feb 9 2001 hship

Reinstate SGML validation of DocBook documents (before apply stylesheets), even though
onsgmls is broken (can't properly report errors) ... we at least get the line numbers.

* Feb 6 2001 hship

Rename a couple of variables (LOCAL_CLASSPATH to PROJ_CLASSPATH and MODULE_NAME
to PROJECT_NAME).
Start of DocBook module rule to validate the input with the onsgmls parser (which
alas, has bugs).

* Feb 2 2001 hship

Initial work on alternate targets for DocBook.  Added rtf.

* Jan 31 2001 hship

Fix DocBook.mk to change into the HTML directory when running openjade
(otherwise, intra-document links are broken).

* Jan 31 2001 hship

Remove some older SITE_xxx variables, no longer used.
Use the -c option with openjade, instead of setting SGML_CATALOG_FILES variable.

* Jan 31 2001 hship

Check in support for DocBook modules (currently, only works under Cygwin).

* Jan 30 2001 hship

Add Solaris support.  Add sample LocalConfig.mk and SiteConfig.mk.