@@ -1,3 +1,8 @@
+* Jun 13 2001 hship
+
+Fix broken code related to overriding RESOURCE_EXTENSIONS.
+Remove unused block related to the old way of cataloging packages.
+
 * Jun 12 2001 hship
 
 Add support for JAR/WAR Manifests.
